--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ section {
 
 #profile {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   gap: 5rem;
   height: 80vh;
 }
@@ -182,6 +182,7 @@ section {
 
 .my-pic{
   border-radius: 24%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .section__text {
