--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ a:hover {
   max-height: 0;
   overflow: hidden;
   transition: all 0.3 ease-in-out;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .menu-links a {
@@ -280,6 +281,7 @@ section {
   gap: 2rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
+  justify-content: space-around;
 }
 
 .about-details-container {
@@ -420,6 +422,7 @@ article .icon {
 
 .contact-info-container p {
   font-size: larger;
+  margin: 0.5rem 0; 
 }
 
 .contact-icon {
@@ -435,6 +438,7 @@ article .icon {
 footer {
   height: 26vh;
   margin: 0 1rem;
+  margin-bottom: 0;
 }
 
 footer p {
